--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<h1>Editing Word</h1>
 <%= form_with(model: word, local: true) do |form| %>
   <% if word.errors.any? %>
     <div id="error_explanation">
@@ -21,3 +22,6 @@
     <%= form.submit %>
   </div>
 <% end %>
+<%= link_to 'Show', @word %> |
+<%= link_to 'Destroy', @word, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<%= link_to 'Back', words_path %>
