--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -1,3 +1,21 @@
-<h1>New Word</h1>
-<%= render 'form', word: @word %>
-<%= link_to 'Back', words_path %>
+<h1>Add Word</h1>
+<% if @word.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(word.errors.count, "error") %> prohibited this word from being saved:</h2>
+    <ul>
+      <% word.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%= form_for @word do |f| %>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+<%= link_to 'Back', "/" %>
