--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 <p>
-  <%= link_to "Add Word", new_word_path %>
   <strong>List of Words:</strong>
-  <% @words.each do |word| %>
+  <%= link_to "Add Word", new_word_path %>
+  <% @user.words.each do |word| %>
     <li><%= word.name %></li>
     <%= link_to "Delete Word", @word, method: :delete, data: { confirm: 'Are you sure?' } %>
   <% end %>
 </p>
 <p>
   <strong>List of Poems:</strong>
-  <% @poems.each do |poem| %>
+  <% @user.poems.each do |poem| %>
     <li><%= poem.poem %></li>
     <%= link_to "edit", edit_poem_path(poem) %>
   <% end %>
@@ -17,4 +17,4 @@
 <% if @user && @user.id %>
   <%= link_to "Logout", login_path, method: :delete %> |
 <% end %>
-<%= link_to 'Delete Account *to do*', users_path %>
+<%= link_to 'Delete Account', @user, method: :delete, data: { confirm: 'Are you sure?' } %> |
