--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<h1>Welcome to Rhyme Time</h1>
+<h1 id="welcome">Welcome to Rhyme Time</h1>
 <table>
   <thead>
     <tr>
