added shakespeare on the welcome page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,12 @@
       <td><%= link_to 'Sign Up', signup_path %></td>
       <td><%= link_to 'See all Poems', poems_path %></td>
     </tr>
+    <div>
+    <%= @title %><br>
+    <% @lines_array.each do |line| %>
+    <%= line %>
+    <% end %>
+    </div>
   </tbody>
 </table>
 <br>
