--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,9 +9,9 @@
   </thead>
   <tbody>
     <tr>
-      <td><%= link_to 'Log In', login_path %></td>
-      <td><%= link_to 'Sign Up', signup_path %></td>
-      <td><%= link_to 'See all Poems', poems_path %></td>
+      <td><%= link_to 'Log In', login_path, class: "button" %></td>
+      <td><%= link_to 'Sign Up', signup_path, class: "button" %></td>
+      <td><%= link_to 'See all Poems', poems_path, class: "button" %></td>
     </tr>
   </tbody>
 </table>
