--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,12 +17,24 @@
 @import url('https://fonts.googleapis.com/css?family=Alegreya|Roboto|Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Cormorant:500,500i&display=swap');
 
+
+html,
+body {
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'roboto', sans-serif;
-    background-image: url(green-cup.png);
+    background-image: url(seamless_paper_texture.png);
     background-repeat: repeat;
-    margin: 0;
     text-align: center;
+    width: 100%;
+    min-height: 100%;
 }
 
 table {
@@ -30,35 +42,62 @@ table {
     margin-right: auto;
 }
 
-header {
+.header {
     color: white;
     background-image: url(black-background.png);
-    width: 100%;
-    margin: 0;
-    padding: 10px 0px;
-    height: 4em;
+    grid-column: 1 / 7;
+    grid-row: 0 / 1;
 }
 
-header h1 {
+.header h1 {
     font-family: 'Cormorant', serif;
     font-style: italic;
     text-align: left;
     margin: auto;
-    font-size: 4em;
-    padding: 15px 0px;
+    font-size: 3.5em;
+    padding: 20px 20px;
 }
 
-/* .grid {
-    grid-template-columns: repeat(5, 20vw);
-    grid-template-rows: repeat(5, 20vh);
+#github_logo {
+    grid-column: 7;
+    grid-row: 1;
 }
 
-.gridcontainer {
+#github_logo img {
+    width: 65px;
+    height: 65px;
+}
+
+#school_logo {
+    grid-column: 8;
+    grid-row: 1;
+}
+
+#school_logo img {
+    width: 135px;
+    height: 65px;
+}
+
+.container {
     display: grid;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-content: center;
-    grid-template-columns: repeat(5, 20vmin);
-    grid-template-rows: repeat(5, 20vmin);
-} */
+    grid-template-columns: 10% 10% 5% auto 10% 5% 65px 135px;
+    grid-template-rows: 65px 10% 25% 10% 25% auto;
+    grid-auto-flow: row;
+}
+
+.body_yield {
+    grid-column: 4 / 5;
+    grid-row-start: 3;
+}
+
+.button {
+    font: bold 11px Arial;
+    text-decoration: none;
+    background-color: rgb(255, 255, 255);
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+}
