--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -7,6 +7,6 @@
   <%= f.text_field :username %><br>
   <%= f.label :password %>
   <%= f.password_field :password %><br />
-  <%= f.submit "Login" %>
+  <%= f.submit "Login", class: "button" %>
 <% end %>
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path, class: "button" %>
