--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,4 +18,4 @@
   <%= f.password_field :password %><br>
   <%= f.submit "Create your account"%>
 <% end %>
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path, class: "button" %>
