--- a/app/views/poems/new.html.erb
+++ b/app/views/poems/new.html.erb
@@ -1,2 +1,23 @@
-<h1>Poems#new</h1>
-<p>Find me in app/views/poems/new.html.erb</p>
+<h1>Write your own Poetry</h1>
+<% if @poem.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(word.errors.count, "error") %> prohibited this word from being saved:</h2>
+    <ul>
+      <% word.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%= form_for @poem do |f| %>
+  <div class="field">
+    <%= f.label :title %>
+    <%= f.text_field :title %>
+    <%= f.label :poem %>
+    <%= f.text_field :poem %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+<%= link_to 'Back', "/", class: "button" %>
