--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,148 @@
  *= require_self
  */
 
-@import url('https://fonts.googleapis.com/css?family=Alegreya|Roboto|Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Cormorant:500,500i&display=swap');
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
 
 html,
 body {
@@ -43,10 +182,26 @@ table {
 }
 
 .header {
-    color: white;
-    background-image: url(black-background.png);
+    color: grey;
+    background-image: url(blackwhite.png);
+    background-size: 100%;
     grid-column: 1 / 7;
     grid-row: 0 / 1;
+}
+
+.header a {
+    text-decoration: none;
+    color: white;
+}
+
+.header a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.header a:visited {
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .header h1 {
@@ -54,8 +209,14 @@ table {
     font-style: italic;
     text-align: left;
     margin: auto;
-    font-size: 3.5em;
-    padding: 20px 20px;
+    font-size: 2.8em;
+    padding: 10px 10px;
+}
+
+.header,
+#github_logo img,
+#school_logo img {
+    border-bottom: black solid 2px;
 }
 
 #github_logo {
@@ -80,17 +241,18 @@ table {
 
 .container {
     display: grid;
-    grid-template-columns: 10% 10% 5% auto 10% 5% 65px 135px;
-    grid-template-rows: 65px 10% 25% 10% 25% auto;
+    grid-template-columns: 135px 65px 10% auto 5% 5% 65px 135px;
+    grid-template-rows: 65px 10% 20% 18% 40% 5%;
     grid-auto-flow: row;
 }
 
-.body_yield {
+.index {
     grid-column: 4 / 5;
     grid-row-start: 3;
 }
 
-.button {
+.button,
+[type=submit] {
     font: bold 11px Arial;
     text-decoration: none;
     background-color: rgb(255, 255, 255);
@@ -100,4 +262,20 @@ table {
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
+    cursor: pointer;
+}
+
+.sonnet {
+    grid-column: 4;
+    grid-row: 5;
+    box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, .05);
+    padding-top: 23px;
+}
+
+#sonnet_title {
+    font-weight: bold;
+}
+
+.sonnet #sonnet_body {
+    font-style: italic;
 }
