--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -1,12 +1,19 @@
-<h2>Login</h2>
-<% if @error %>
-  <p style= "color: red"><%= @error %></p>
-<% end %>
-<%= form_for @user, url: {controller: "sessions", action: "create"} do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %><br>
-  <%= f.label :password %>
-  <%= f.password_field :password %><br />
-  <%= f.submit "Login", class: "button" %>
-<% end %>
-<%= link_to 'Back', users_path, class: "button" %>
+<div class="login">
+  <h2>Login</h2>
+  <% if @error %>
+    <p style= "color: red"><%= @error %></p>
+    <br>
+  <% end %>
+  <%= form_for @user, url: {controller: "sessions", action: "create"} do |f| %>
+    <%= f.label :username %>
+    <%= f.text_field :username %>
+    <br>
+    <br>
+    <%= f.label :password %>
+    <%= f.password_field :password %><br>
+    <br>
+    <br>
+    <%= f.submit "Login", class: "button" %>   <%= link_to 'Back', users_path, class: "button" %>
+  <% end %>
+  <br>
+</div>
