--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,21 @@
 <div class="index">
+  <h1 id="welcome">Welcome to Rhyme Time</h1>
   <p id="notice"><%= notice %></p>
+  <br>
+  <br>
   <table>
-    <thead>
-      <tr>
-        <th>Welcome to Rhyme Time</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
     <tbody>
       <tr>
-        <td><%= link_to 'Log In', login_path, class: "button" %> |</td>
-        <td><%= link_to 'Sign Up', signup_path, class: "button" %> |</td>
-        <td><%= link_to 'See all Poems', poems_path, class: "button" %> </td>
+        <td><%= link_to 'Log In', login_path, class: "button" %></td>
+        <td><%= link_to 'Sign Up', signup_path, class: "button" %></td>
+        <td><%= link_to 'All Poems', poems_path, class: "button" %> </td>
       </tr>
     </tbody>
   </table>
 </div>
 <div class="sonnet">
+  <h2>- William Shakespeare -</h2>
+  <br>
   <div id="sonnet_title"> <%= @title %></div>
   <br>
   <br>
