--- a/app/views/poems/edit.html.erb
+++ b/app/views/poems/edit.html.erb
@@ -1,2 +1,26 @@
-<h1>Poems#edit</h1>
-<p>Find me in app/views/poems/edit.html.erb</p>
+<div class="poem_edit">
+  <h2>Edit your poem</h2>
+  <% if @poem.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@poem.errors.count, "error") %> prohibited this poem from being saved:</h2>
+      <ul>
+        <% @poem.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <%= form_for @poem do |f| %>
+    <div class="field">
+      <%= f.label :title %>
+      <%= f.text_field :title, :size => "40" %><br>
+      <br>
+      <%= f.label :poem %>
+      <%= f.text_area :poem, :cols => 110, :rows => 10 %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
+  <%= link_to 'Back', user_path(@user), class: "button" %>
+</div>
