--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,9 @@
     <% @user.words.each do |word| %>
       <br>
       <br>
-      - <%= word.name.capitalize %>
+      - <%= word.name.capitalize %><br>
+      <br>
+      <%= button_to "🗑", word_path(word), method: :delete, data: { confirm: 'Are you sure?' }, class: "button delete_button" %>
       <br>
       <br>
       <p><%= "#{word.name.capitalize} rhymes with" %>
@@ -25,7 +27,6 @@
           <%= select("adjectives", "words_id", ApiService.adjectives_for(word.name), { include_blank: false }) %>
           <br>
           <br>
-          <%= button_to "🗑", word_path(word), method: :delete, data: { confirm: 'Are you sure?' }, class: "button delete_button" %>
         <% end %>
       </p>
       <br>
@@ -36,11 +37,16 @@
     <br>
     <br>
     <p>
-      <u><strong>List of Poems:</u></strong>
+      <u><strong>List of Poems:</u></strong><br>
+      <br>
       <% @user.poems.each do |poem| %>
-        <%= poem.poem %>
-        <%= link_to "edit", edit_poem_path(poem), class: "button" %>
+        - <%= poem.title %><br>
+        <br>
+        <%= button_to "🗑", poem_path(poem), method: :delete, data: { confirm: 'Are you sure?' }, class: "button delete_button" %> |
+        <%= link_to "edit", edit_poem_path(poem), class: "button" %><br>
+        <br>
       <% end %>
+      <br>
       <br>
       <br>
       <%= link_to "Create Poem", new_poem_path, class: "button"%>
