--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -130,6 +130,10 @@ body {
     line-height: 1;
 }
 
+form {
+    display: inline-block;
+}
+
 ol,
 ul {
     list-style: none;
@@ -171,6 +175,7 @@ html {
 body {
     font-family: 'roboto', sans-serif;
     background-image: url(backdrop.jpg);
+    background-size: 100% 105%;
     background-repeat: repeat;
     width: 100%;
     min-height: 100%;
@@ -189,6 +194,7 @@ table tbody td {
     color: grey;
     background-image: url(blackwhite.png);
     background-size: 100%;
+    background-repeat: no-repeat;
     grid-column: 1 / 8;
     grid-row: 0 / 1;
 }
@@ -263,19 +269,26 @@ table tbody td {
 .user_show,
 .login,
 .word_new,
-.signup {
+.signup,
+.poem_index,
+.poem_new,
+.poem_edit {
     grid-column: 4 / span 3;
     grid-row-start: 3;
 }
 
-.login {
+.login,
+.signup {
     text-align: center;
 }
 
 .login h2,
 .user_show h2,
 .word_new h2,
-.signup h2 {
+.signup h2,
+.poem_index h2,
+.poem_new h2,
+.poem_edit h2 {
     font-size: 30px;
     padding-bottom: 30px;
     text-align: center;
