--- a/app/views/poems/index.html.erb
+++ b/app/views/poems/index.html.erb
@@ -1,21 +1,12 @@
-<h1>Poems#index</h1>
-<p id="notice"><%= notice %></p>
-<table>
-  <thead>
-    <tr>
-      <th>Poem</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @poems.each do |poem| %>
-      <tr>
-        <td><%= poem.title %></td>
-        <td><%= poem.poem %></td>
-        <td><%= link_to 'Go back', users_path, class: "button" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Word', new_word_path, class: "button" %>
+<div class="poem_index">
+  <h2>Poems</h2>
+  <p id="notice"><%= notice %></p>
+  <br>
+  <br>
+  <% @poems.each do |poem| %>
+    <%= poem.poem %>
+    <%= link_to 'Go back', users_path, class: "button" %>
+  <% end %>
+  <br>
+  <%= link_to 'Add Poem', new_poem_path, class: "button" %>
+</div>
