analytics in views

--- a/app/views/login/login.html.erb
+++ b/app/views/login/login.html.erb
@@ -16,4 +16,11 @@
     <%= f.submit "Login", class: "button" %>   <%= link_to 'Back', users_path, class: "button" %>
   <% end %>
   <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h5 class="analytics">Enjoy the last poem created by one of our users:</h5><br>
+  <h5 class="analytics"><%= AnalyticService.last_poem_created.title.capitalize %></h5><br>
+  <h5 class="analytics"><%= AnalyticService.last_poem_created.poem.capitalize %></h5>
 </div>
