--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,7 @@
     </tbody>
   </table>
 </div>
+<h5 class="analytics">You are the <%= AnalyticService.number_of_users + 1 %>th user!</h5>
 <div class="sonnet">
   <h2>- William Shakespeare -</h2>
   <br>
