--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,4 +25,9 @@
   <% end %>
   <br>
   <%= link_to 'Back', users_path, class: "button" %>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h5 class="analytics">You are the <%= AnalyticService.number_of_users + 1 %> million(th) user!</h5>
 </div>
