--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,8 +12,11 @@
       </tr>
     </tbody>
   </table>
+  <br>
+  <br>
+  <br>
+  <div class="analytics"> <%= AnalyticService.number_of_poems %> poems have been created with us!</div>
 </div>
-<h5 class="analytics">You are the <%= AnalyticService.number_of_users + 1 %>th user!</h5>
 <div class="sonnet">
   <h2>- William Shakespeare -</h2>
   <br>
