--- a/app/views/poems/new.html.erb
+++ b/app/views/poems/new.html.erb
@@ -10,7 +10,8 @@
       </ul>
     </div>
   <% end %>
-  <h5 class="analytics">The average number of characters per poem is <%= AnalyticService.number_of_char_per_poem %>; Try to beat that!</h5><br>
+  <h5 class="analytics">The average number of characters per poem is <%= AnalyticService.number_of_char_per_poem %> - Try to beat that!</h5>
+  <br>
   <%= form_for @poem do |f| %>
     <div class="field">
       <%= f.label :title %>
