--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
     </header>
     <%# <a id="school_logo" href="https://flatironschool.com/"><img src="/assets/flatiron.gif" title="Flatiron Schools"></a> %>
     <%= link_to "https://flatironschool.com/" do %>
-      <%= image_tag "/assets/flatiron.gif", id: "school_logo" %>
+      <%= image_tag "flatiron.gif", id: "school_logo" %>
     <% end %>
     <%= link_to "https://github.com/rjortega/rhyme_time" do %>
-      <%= image_tag "/assets/github.png", id: "github_logo" %>
+      <%= image_tag "/assets/images/github.png", id: "github_logo" %>
     <% end %>
     <%# <a id="github_logo" href="https://github.com/rjortega/rhyme_time"><img src="/assets/github.png" title="Github Project"></a> %>
     <%= yield %>
